# Controler

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  jmeshcontrol.jks  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/release/: output.json
app/src/androidTest/java/com/jmesh/controler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/airconditioner/: air_conditioner_connect.c  dll.c  dll.h
app/src/main/cpp/airswitch/: air_conditioner_switch_connect.c  dll.h  ftkt_tz_and_hz.c
app/src/main/cpp/centerairconditioner/read/: dll.h  getZhongYangKongTiao.c  read_connect.c
app/src/main/cpp/centerairconditioner/set/: dll.h  setZhongYangKongTiao.c  set_connect.c
app/src/main/cpp/common/: BCT645.h  bct645.c  des.c  des.h  param.c  param.h  pub_func.h
app/src/main/cpp/fourlight/: four_light_connect.c  getSiLuDengKong.c  getdll.h
app/src/main/cpp/fourlight/set/: four_light_connect_set.c  setSiLuDengKong.c  setdll.h
app/src/main/cpp/light/: dll.c  dll.h  light_connect.c
app/src/main/cpp/meter/cmd/: connect.c  dll.h  main.c
app/src/main/cpp/meter/switch/: dll.c  dll.h  meter_switch_connect.c
app/src/main/cpp/socket/: dll.c  dll.h  socket_connect.c
app/src/main/java/com/jmesh/controler/: ActivityTest.java  Main4Activity.java
app/src/main/java/com/jmesh/controler/airconditioner/: GreeFrequency.java  HuaLing.java  IAirConditioner.java  Midea.java
app/src/main/java/com/jmesh/controler/base/: BleBaseActivity.java  BleBaseApplication.java  ReadingTaskHandler.java
app/src/main/java/com/jmesh/controler/data/: AirConditionerBrand.java  AirConditionerData.java  BDBleDevice.java  BluetoothData.java  DataResolver.java  FourLightState.java  MeterBaseData.java  MeterData.java
app/src/main/java/com/jmesh/controler/jni/: AirConditionerConnector.java  AirConditionerSwitchConnector.java  CenterAirConditionerConnector.java  FourLightConnector.java  LightJniConnector.java  MeterJniConnecter.java  SocketJniConnector.java
app/src/main/java/com/jmesh/controler/task/: TaskACAuthenticationSwitchOn.java  TaskACSwitchOff.java  TaskACSwitchOn.java  TaskAcAuthenticationSwitchOff.java  TaskAirConditioner.java  TaskBase.java  TaskCenterAirconditionerSetModeNTemp.java  TaskCenterAirconditionerSetPower.java  TaskCenterAirconditionerSetWindStrength.java  TaskFourLightDisable.java  TaskFourLightEnable.java  TaskGetCenterAirConditionerStatus.java  TaskGetFourLightState.java  TaskLightSwitchOff.java  TaskLightSwitchOn.java  TaskMeterCmd.java  TaskMeterGetSwitchStatus.java  TaskMeterMeterCurrent.java  TaskMeterMeterEnergyConsume.java  TaskMeterMeterFrequency.java  TaskMeterMeterPower.java  TaskMeterMeterPowerFactor.java  TaskMeterMeterVolt.java  TaskMeterSwitch.java  TaskMeterSwitchOff.java  TaskMeterSwitchOn.java  TaskSocketSwitchOff.java  TaskSocketSwitchOn.java
app/src/main/java/com/jmesh/controler/ui/: ActivityQRCodeScan.java  ControlerBaseActivity.java
app/src/main/java/com/jmesh/controler/util/: HexUtils.java
app/src/main/res/anim/: anim_shake.xml
app/src/main/res/drawable/: bg_control_top.xml  bg_scan_refresh_button.xml  gradient_blue_radial.xml
app/src/main/res/layout/: activity_device_scan.xml  activity_home.xml  activity_main.xml  activity_main4.xml  activity_qr_code_scan.xml  activity_test.xml  control_air_conditioner.xml  control_four_light.xml  control_head.xml  control_light.xml  control_meter.xml  control_meter_x.xml  dlg_air_conditioner_choose_mode.xml  dlg_base_data.xml  dlg_choose_airconditioner_brand.xml  dlg_choose_wind_strength.xml  item_home_list.xml  item_scan_device.xml  layout_air_conditioner_button.xml  layout_item_grid_data.xml
app/src/main/res/values/: ids.xml  strings.xml  styles.xml
app/src/test/java/com/jmesh/controler/: ExampleUnitTest.java
appbase/: build.gradle
(+154 files in other folders)
